[package]
name = "vm"
version = "0.1.0"
authors = ["Maxim Bogdanov <maxim.bogdanov@coins.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-primitive-derive = "^0.1"
byteorder = "1"
signal-hook = "0.1.16"
termios = "0.3.3"
num-traits = "0.2"
num-derive = "0.3"
clap = "3.0.0-beta.2"